<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/winning_points"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/winning_points_et"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:hint="@string/winning_points_def"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="25sp"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/computer_mode"
                android:textAlignment="textEnd"
                android:textSize="20sp" />

            <ToggleButton
                android:id="@+id/computer_mode_toggle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textOff="@string/computer_mode_rand"
                android:textOn="@string/computer_mode_intelli" />

        </LinearLayout>

        <Button
            android:id="@+id/lets_play_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lets_play" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>